--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^8.1.2",
     "@vercel/analytics": "^1.5.0",
     "astro": "^4.16.7",
     "astro-icon": "^1.1.1",
